package org.interscity.htc
package core.actor.manager

import core.actor.manager.base.LocalTimeManager
import core.entity.event.SpontaneousEvent
import core.entity.event.control.simulation.{WindowStart, WindowEnd, OptimisticEvent}
import core.types.Tick

import org.apache.pekko.actor.{ActorRef, Props}
import org.htc.protobuf.core.entity.actor.Identify
import org.htc.protobuf.core.entity.event.control.execution.{RegisterActorEvent, StartSimulationTimeEvent}
import org.interscity.htc.core.enumeration.LocalTimeManagerTypeEnum

import scala.collection.mutable

/**
 * Optimistic Time Window Time Manager implementation.
 * 
 * This Local Time Manager is designed for optimistic simulation strategies that
 * allow speculative execution and rollback capabilities. Currently implemented
 * as a DES-compatible placeholder while the full optimistic algorithms are
 * being developed.
 * 
 * Planned optimistic simulation features:
 * - Speculative event processing beyond current simulation time
 * - State checkpointing and rollback mechanisms
 * - Anti-message generation for causality violation recovery
 * - Time window management for bounded optimism
 * - Performance optimization through parallel execution
 * 
 * Current implementation provides:
 * - DES compatibility mode for immediate deployment
 * - Infrastructure for optimistic event tracking
 * - Placeholder methods for future rollback algorithms
 * - State management foundations for checkpointing
 * 
 * @param simulationDuration Maximum duration of the simulation in ticks
 * @param simulationManager Reference to the main simulation manager
 * @param parentManager Reference to the Global Time Manager for coordination
 * @param windowSize Size of the optimistic time window (currently unused)
 * 
 * @author Hyperbolic Time Chamber Team
 * @version 1.4.0
 * @since 1.0.0
 */
class OptimisticTimeWindowTimeManager(
  simulationDuration: Tick,
  simulationManager: ActorRef,
  parentManager: ActorRef,
  val windowSize: Tick = 100
) extends LocalTimeManager(
      simulationDuration = simulationDuration,
      simulationManager = simulationManager,
      parentManager = parentManager,
      timeManagerType = LocalTimeManagerTypeEnum.OptimisticTimeWindow
    ) {

  // Estado específico do Time Window (placeholder para implementação futura)
  private var currentWindowStart: Tick = 0
  private var currentWindowEnd: Tick = 0
  private val rollbackPoints = mutable.Map[Tick, WindowSnapshot]()
  private val optimisticEvents = mutable.Queue[OptimisticEventInfo]()
  private var isInOptimisticMode: Boolean = false

  case class WindowSnapshot(
    tick: Tick,
    actorStates: Map[String, Any], // Placeholder para estados dos atores
    messageBuffer: List[Any] = List.empty
  )

  case class OptimisticEventInfo(
    eventTime: Tick,
    actorId: String,
    eventData: Any,
    var isCommitted: Boolean = false
  )

  override protected def onSimulationStart(start: StartSimulationTimeEvent): Unit = {
    currentWindowStart = start.startTick
    currentWindowEnd = start.startTick + windowSize
    logInfo(s"Time Window Time Manager iniciado no tempo ${start.startTick} (windowSize: $windowSize)")
    logWarn("ATENÇÃO: Time Window é implementação placeholder - usando modo compatibilidade DES")
  }

  /**
   * Time Window aceita scheduling (compatibilidade DES por enquanto)
   */
  override protected def acceptsScheduling: Boolean = true

  /**
   * Cria evento para ator (modo DES por enquanto)
   */
  override protected def createEventForActor(tick: Tick, identity: Identify): Any = {
    // Por enquanto, usa SpontaneousEvent como DES
    SpontaneousEvent(
      tick = tick,
      actorRef = self
    )
  }

  /**
   * Handle para eventos específicos do Time Window
   */
  override protected def handleSpecificEvent(event: Any): Unit = event match {
    case windowStart: WindowStart => handleWindowStart(windowStart)
    case windowEnd: WindowEnd => handleWindowEnd(windowEnd)
    case optimistic: OptimisticEvent => handleOptimisticEvent(optimistic)
    case _ => 
      logDebug(s"Time Window: Evento específico não tratado: ${event.getClass.getSimpleName}")
      // Fallback for DES behavior
  }

  override protected def onActorRegistered(event: RegisterActorEvent): Unit = {
    logInfo(s"Time Window: Ator ${event.actorId} registrado (Total: ${registeredActors.size})")
    
    // Salvar estado inicial para possível rollback
    saveActorState(event.actorId, currentWindowStart)
  }

  /**
   * IMPLEMENTAÇÃO FUTURA: Handle Window Start
   */
  private def handleWindowStart(windowStart: WindowStart): Unit = {
    logInfo(s"Time Window: Iniciando janela no tick ${windowStart.startTick} com tamanho ${windowStart.windowSize}")
    
    currentWindowStart = windowStart.startTick
    currentWindowEnd = windowStart.startTick + windowStart.windowSize
    isInOptimisticMode = true
    
    // PLACEHOLDER para implementação futura:
    // 1. Salvar snapshot global para rollback
    // 2. Configurar buffer de mensagens
    // 3. Inicializar modo especulativo
    
    saveGlobalSnapshot(windowStart.startTick)
    
    logWarn("Time Window: Usando modo compatibilidade DES por enquanto")
  }

  /**
   * IMPLEMENTAÇÃO FUTURA: Handle Window End
   */
  private def handleWindowEnd(windowEnd: WindowEnd): Unit = {
    logInfo(s"Time Window: Finalizando janela no tick ${windowEnd.endTick}")
    
    // PLACEHOLDER para implementação futura:
    // 1. Commit de eventos válidos
    // 2. Rollback se necessário
    // 3. Limpeza de estado otimístico
    
    commitValidEvents(windowEnd.endTick)
    cleanupOptimisticState()
    
    isInOptimisticMode = false
    
    // Reportar para Global Time Manager
    reportToGlobalTimeManager()
  }

  /**
   * IMPLEMENTAÇÃO FUTURA: Handle Optimistic Event
   */
  private def handleOptimisticEvent(optimistic: OptimisticEvent): Unit = {
    logInfo(s"Time Window: Evento otimístico no tick ${optimistic.targetTick}")
    
    optimistic.rollbackTick match {
      case Some(rollbackTick) =>
        logWarn(s"Time Window: Rollback solicitado para tick $rollbackTick")
        performRollback(rollbackTick)
      case None =>
        logDebug(s"Time Window: Processando evento especulativo no tick ${optimistic.targetTick}")
        processOptimisticEvent(optimistic)
    }
  }

  /**
   * PLACEHOLDER: Salva estado de ator
   */
  private def saveActorState(actorId: String, tick: Tick): Unit = {
    // TODO: Implementar captura real de estado
    logDebug(s"Time Window: Salvando estado do ator $actorId no tick $tick")
  }

  /**
   * PLACEHOLDER: Salva snapshot global
   */
  private def saveGlobalSnapshot(tick: Tick): Unit = {
    val snapshot = WindowSnapshot(
      tick = tick,
      actorStates = Map.empty // TODO: Capturar estados reais
    )
    rollbackPoints.put(tick, snapshot)
    logDebug(s"Time Window: Snapshot global salvo para tick $tick")
  }

  /**
   * PLACEHOLDER: Commit de eventos válidos
   */
  private def commitValidEvents(untilTick: Tick): Unit = {
    val eventsToCommit = optimisticEvents.filter(_.eventTime <= untilTick)
    eventsToCommit.foreach(_.isCommitted = true)
    
    logInfo(s"Time Window: ${eventsToCommit.size} eventos commitados até tick $untilTick")
  }

  /**
   * PLACEHOLDER: Limpeza de estado otimístico
   */
  private def cleanupOptimisticState(): Unit = {
    optimisticEvents.filterInPlace(_.isCommitted)
    
    // Manter apenas último snapshot
    if (rollbackPoints.size > 1) {
      val latestTick = rollbackPoints.keys.max
      rollbackPoints.retain((tick, _) => tick == latestTick)
    }
    
    logDebug("Time Window: Estado otimístico limpo")
  }

  /**
   * PLACEHOLDER: Processa evento especulativo
   */
  private def processOptimisticEvent(optimistic: OptimisticEvent): Unit = {
    val eventInfo = OptimisticEventInfo(
      eventTime = optimistic.targetTick,
      actorId = "unknown", // TODO: extrair do evento
      eventData = optimistic
    )
    optimisticEvents.enqueue(eventInfo)
    
    logDebug(s"Time Window: Evento especulativo adicionado para tick ${optimistic.targetTick}")
  }

  /**
   * PLACEHOLDER: Executa rollback
   */
  private def performRollback(rollbackTick: Tick): Unit = {
    logWarn(s"Time Window: PLACEHOLDER - Executando rollback para tick $rollbackTick")
    
    rollbackPoints.get(rollbackTick) match {
      case Some(snapshot) =>
        logInfo(s"Time Window: Restaurando snapshot do tick ${snapshot.tick}")
        
        // TODO: Implementar rollback real:
        // 1. Restaurar estados dos atores
        // 2. Cancelar eventos especulativos inválidos
        // 3. Reenviar mensagens causais corretas
        // 4. Reiniciar execução do ponto correto
        
        // Limpar eventos especulativos após o rollback
        optimisticEvents.filterInPlace(_.eventTime < rollbackTick)
        
      case None =>
        logError(s"Time Window: Snapshot não encontrado para rollback do tick $rollbackTick")
    }
  }

  override protected def onSpontaneousEvent(spontaneous: SpontaneousEvent): Unit = {
    if (isInOptimisticMode) {
      logDebug(s"Time Window: Evento espontâneo especulativo no tick ${spontaneous.tick}")
      // TODO: Verificar se evento requer rollback
    } else {
      logDebug(s"Time Window: Evento espontâneo normal no tick ${spontaneous.tick}")
    }
  }

  override protected def onSimulationStop(): Unit = {
    val duration = System.currentTimeMillis() - startTime
    logInfo(s"Time Window simulação finalizada:")
    logInfo(s"  Tempo final: $localTickOffset")
    logInfo(s"  Duração: ${duration}ms")
    logInfo(s"  Window size: $windowSize")
    logInfo(s"  Atores registrados: ${registeredActors.size}")
    logInfo(s"  Eventos otimísticos processados: ${optimisticEvents.size}")
    logInfo(s"  Rollbacks executados: 0") // TODO: contar rollbacks reais
  }

  /**
   * Obtém estatísticas do Time Window
   */
  def getTimeWindowStats: Map[String, Any] = {
    Map(
      "windowSize" -> windowSize,
      "currentWindowStart" -> currentWindowStart,
      "currentWindowEnd" -> currentWindowEnd,
      "isOptimisticMode" -> isInOptimisticMode,
      "rollbackPoints" -> rollbackPoints.size,
      "optimisticEvents" -> optimisticEvents.size,
      "registeredActors" -> registeredActors.size
    )
  }
}

object OptimisticTimeWindowTimeManager {
  def props(
    simulationDuration: Tick,
    simulationManager: ActorRef,
    parentManager: ActorRef,
    windowSize: Tick = 100
  ): Props =
    Props(classOf[OptimisticTimeWindowTimeManager], simulationDuration, simulationManager, parentManager, windowSize)
}
